objects/KnowledgeApprovalMatrix__c.object
<CustomObject>
    <description>This Object is used to populate the Knowledge Article with the  Approver/s users who have the access to approve articles based on product family criteria</description>
    <fields>
        <fullName>ApprovalRoutingProductFamily__c</fullName>
        <description>Approval Routing Product Family</description>
        <label>Approval Workflow</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ApprovalRoutingProductFamily</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArticleTypeProductFamily__c</fullName>
        <description>Concatenation of ArticleType and Product Family</description>
        <label>ArticleTypeProductFamily</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KCSReviewerSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary KCS Reviewer</description>
        <label>Secondary KCS Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KCSReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KCS Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KnowledgeRecordType__c</fullName>
        <description>Knowledge Record Type</description>
        <label>Article Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KnowledgeRecordType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagementReviewerSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Management Reviewer</description>
        <label>Secondary Management Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManagementReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Management Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublisherSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Publisher</description>
        <label>Secondary Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechnicalReviewerSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Technical Reviewer</description>
        <label>Secondary Technical Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechnicalReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpperManagementReviewerSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Upper Management Reviewer</description>
        <label>Secondary Upper Management Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpperManagementReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upper Management Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Approval_Matrix7</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Knowledge Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApprovalRoutingProductFamily__c</columns>
        <columns>KnowledgeRecordType__c</columns>
        <columns>TechnicalReviewer__c</columns>
        <columns>KCSReviewer__c</columns>
        <columns>ManagementReviewer__c</columns>
        <columns>UpperManagementReviewer__c</columns>
        <columns>Publisher__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Solution_ListView</fullName>
        <columns>NAME</columns>
        <columns>ApprovalRoutingProductFamily__c</columns>
        <columns>TechnicalReviewer__c</columns>
        <columns>KCSReviewer__c</columns>
        <columns>Publisher__c</columns>
        <columns>KnowledgeRecordType__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>KnowledgeRecordType__c</field>
            <operation>equals</operation>
            <value>Solution</value>
        </filters>
        <label>Solution ListView</label>
    </listViews>
    <nameField>
        <displayFormat>KAM-{000000}</displayFormat>
        <label>Knowledge Approval Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approvers_for_Knowledge_Article</fullName>
        <active>true</active>
        <description>Knowledge Article RecordType do not have Management Reviewer / Upper Management reviewer</description>
        <errorConditionFormula>(ISPICKVAL(KnowledgeRecordType__c,&apos;KnowledgeArticle&apos;)) &amp;&amp;
(NOT(ISBLANK(ManagementReviewer__c)) ||
NOT(ISBLANK(UpperManagementReviewer__c)))</errorConditionFormula>
        <errorMessage>For  Knowledge Article Record , Management Reviewer and Upper Management Reviewer should be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Management_review_is_reqd_for_AdvNot</fullName>
        <active>true</active>
        <description>Upper Management Reviewer and Management Reviewer are mandatory for Advisory and Notification</description>
        <errorConditionFormula>( OR( ISPICKVAL(KnowledgeRecordType__c,&apos;Advisory&apos;), ISPICKVAL(KnowledgeRecordType__c,&apos;Notification&apos;)) &amp;&amp; OR(ISBLANK(ManagementReviewer__c), ISBLANK(UpperManagementReviewer__c), ISBLANK(ManagementReviewerSec__c), ISBLANK(UpperManagementReviewerSec__c)) &amp;&amp; NOT($User.BypassVR__c))</errorConditionFormula>
        <errorMessage>Primary and Secondary Upper Management and Management Reviewers are mandatory for Advisory and Notification Articles</errorMessage>
    </validationRules>
</CustomObject>